# cloud_computing_project_um

./: Grade Table.xlsx  README.md  docker-compose.yml  index.html  processor.dockerfile  processor.py  pyproject.toml  renderer.dockerfile  renderer.py  uploader.dockerfile  uploader.py
